
    There is an equivalent class called "vampire.Handler()" which can be
    used if rather than publisher style functions, normal content handler
    style functions are preferred. In the latter, basic Python types can
    not however be publisher like they can with publisher.

    Note that both these classes can actually be used from outside of
    Vampire from a standard content handler.


Changes in Vampire 1.4
======================

  - Configuration mechanism no longer squashes key names to lower case as
    is the default for ConfigParser module supplied with Python. Instead,
    case sensitivity is preserved.

  - Configuration mechanism will cache config in the request object. This
    avoids multiple searches if distinct bits of code executing within same
    context of one request use the same config. Also ensures that all code
    within that request will always use the same config files and not a
    slightly modified version which gets reloaded part way through a
    request.

  - Vampire can now be used to intercept handlers other than that for the
    PythonHandler directive and it will be directed to a specific module
    indicated within the handlers section of the Vampire config file. Thus,
    if in your ".htaccess" file you might have:

      PythonAccessHandler vampire

    In your ".vampire" config file you might then have:

      [Handlers]

      accesshandler = %(__config_root__)s/modules/access-handler.py

    The handler function in the specified file must be the default for the
    particular directive, it cannot be modified like it can using "::" in
    the ".htaccess" file.

  - Fixed bug which caused config search to fail when trying to obtain config
    in a handler phase prior to the phase corresponding to the PythonHandler
    directive. Would be triggered when request was against a directory.

  - Fixed bug whereby on Python 2.3 and latter where items() exists on the